--- a/public/korean/index.html
+++ b/public/korean/index.html
@@ -21,17 +21,17 @@
     <meta itemprop="wordCount" content="5">
     <title>Korean :: Ray&#39;s Recipe&#39;s</title>
     <link href="/korean/index.xml" rel="alternate" type="application/rss+xml" title="Korean :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747641424" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747641424" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747641424" rel="stylesheet">
-    <link href="/css/theme.css?1747641424" rel="stylesheet">
-    <link href="/css/format-html.css?1747641424" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747641424" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747641424" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747641424" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747641424" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747641424" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747641424" defer></script>
-    <script src="/js/search.js?1747641424" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747685058" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747685058" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747685058" rel="stylesheet">
+    <link href="/css/theme.css?1747685058" rel="stylesheet">
+    <link href="/css/format-html.css?1747685058" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747685058" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747685058" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747685058" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747685058" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747685058" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747685058" defer></script>
+    <script src="/js/search.js?1747685058" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -41,7 +41,7 @@
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747641424";
+      window.relearn.index_js_url="/searchindex.en.js?1747685058";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -184,7 +184,7 @@
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-id="/filipino/index.html"><a class="padding" href="/filipino/index.html">Filipino</a></li>
             <li class="" data-nav-id="/food/index.html"><a class="padding" href="/food/index.html">Food</a></li>
-            <li class="" data-nav-id="/indian/index.html"><a class="padding" href="/indian/index.html">Indian</a></li>
+            <li class="" data-nav-id="/indian/index.html"><a class="padding" href="/indian/index.html">Indian</a><ul id="R-subsections-cc1b8a711b72a13dee354fa380e93207" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a></li>
             <li class="active parent " data-nav-id="/korean/index.html"><a class="padding" href="/korean/index.html">Korean</a><ul id="R-subsections-2b02217cff864519119b6160a629e11b" class="collapsible-menu">
             <li class="" data-nav-id="/korean/fried-chicken/index.html"><a class="padding" href="/korean/fried-chicken/index.html">KFC (Korean Fried Chicken)</a></li>
@@ -206,8 +206,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747641424" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747641424" defer></script>
-    <script src="/js/theme.js?1747641424" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747685058" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747685058" defer></script>
+    <script src="/js/theme.js?1747685058" defer></script>
   </body>
 </html>
