--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,17 @@ my discord is getting full so i need a place to store them xd">
     <meta itemprop="wordCount" content="45">
     <title>Ray&#39;s Recipe Collection :: Ray&#39;s Recipe&#39;s</title>
     <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Ray&#39;s Recipe Collection :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747687165" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747687165" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747687165" rel="stylesheet">
-    <link href="/css/theme.css?1747687165" rel="stylesheet">
-    <link href="/css/format-html.css?1747687165" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747687165" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747687165" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747687165" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747687165" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747687165" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747687165" defer></script>
-    <script src="/js/search.js?1747687165" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747697448" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747697448" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747697448" rel="stylesheet">
+    <link href="/css/theme.css?1747697448" rel="stylesheet">
+    <link href="/css/format-html.css?1747697448" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747697448" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747697448" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747697448" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747697448" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747697448" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747697448" defer></script>
+    <script src="/js/search.js?1747697448" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ my discord is getting full so i need a place to store them xd">
       window.relearn.relBaseUri='.';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747687165";
+      window.relearn.index_js_url="/searchindex.en.js?1747697448";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -119,7 +119,7 @@ my discord is getting full so i need a place to store them xd">
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-left"></i></span>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/filipino/index.html" title="Filipino (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/airfry/index.html" title="Airfry (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -192,10 +192,13 @@ my discord is getting full so i need a place to store them xd">
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="" data-nav-id="/filipino/index.html"><a class="padding" href="/filipino/index.html">Filipino</a></li>
-            <li class="" data-nav-id="/food/index.html"><a class="padding" href="/food/index.html">Food</a></li>
+            <li class="" data-nav-id="/airfry/index.html"><a class="padding" href="/airfry/index.html">Airfry</a></li>
+            <li class="" data-nav-id="/baking/index.html"><a class="padding" href="/baking/index.html">Baking</a></li>
             <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a></li>
             <li class="" data-nav-id="/korean/index.html"><a class="padding" href="/korean/index.html">Korean</a><ul id="R-subsections-2b02217cff864519119b6160a629e11b" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-id="/sauces_n_condiments/index.html"><a class="padding" href="/sauces_n_condiments/index.html">Sauces n Condiments</a></li>
+            <li class="" data-nav-id="/snacks/index.html"><a class="padding" href="/snacks/index.html">Snacks</a></li>
+            <li class="" data-nav-id="/filipino/index.html"><a class="padding" href="/filipino/index.html">Filipino</a><ul id="R-subsections-d37179ad8375f367e520e18f1f5ed56f" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/indian/index.html"><a class="padding" href="/indian/index.html">Indian</a><ul id="R-subsections-cc1b8a711b72a13dee354fa380e93207" class="collapsible-menu"></ul></li>
           </ul>
         </div>
@@ -214,8 +217,8 @@ my discord is getting full so i need a place to store them xd">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747687165" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747687165" defer></script>
-    <script src="/js/theme.js?1747687165" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747697448" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747697448" defer></script>
+    <script src="/js/theme.js?1747697448" defer></script>
   </body>
 </html>
