--- a/public/indian/tika_masala/index.html
+++ b/public/indian/tika_masala/index.html
@@ -23,19 +23,19 @@ Tipif you want to make this, marinate the chicken for a day for the best result
     <meta itemprop="name" content="Chicken tikka masala :: Ray&#39;s Recipe&#39;s">
     <meta itemprop="description" content="ForewordThis is the Recipe i use to make Chicken Tikka Masala. as always, keep in mind i go alot by feeling! adjust it to your liking. the list of spices used will be at the very end if you dont have them at home!
 Tipif you want to make this, marinate the chicken for a day for the best result! or at least a couple of hours">
-    <meta itemprop="wordCount" content="410">
+    <meta itemprop="wordCount" content="404">
     <title>Chicken tikka masala :: Ray&#39;s Recipe&#39;s</title>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747782719" rel="stylesheet">
-    <link href="/css/theme.css?1747782719" rel="stylesheet">
-    <link href="/css/format-html.css?1747782719" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747782719" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747782719" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747782719" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747782719" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747782719" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747782719" defer></script>
-    <script src="/js/search.js?1747782719" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747848847" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747848847" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747848847" rel="stylesheet">
+    <link href="/css/theme.css?1747848847" rel="stylesheet">
+    <link href="/css/format-html.css?1747848847" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747848847" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747848847" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747848847" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747848847" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747848847" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747848847" defer></script>
+    <script src="/js/search.js?1747848847" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ Tipif you want to make this, marinate the chicken for a day for the best result
       window.relearn.relBaseUri='..\/..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747782719";
+      window.relearn.index_js_url="/searchindex.en.js?1747848847";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -107,6 +107,11 @@ Tipif you want to make this, marinate the chicken for a day for the best result
 <nav class="TableOfContents">
   <ul>
     <li><a href="#shopping-list">Shopping list!</a></li>
+    <li><a href="#the-spices-you-might-need-to-buy">The Spices you might need to buy!</a>
+      <ul>
+        <li></li>
+      </ul>
+    </li>
     <li><a href="#marinating-the-chicken">Marinating the chicken</a>
       <ul>
         <li></li>
@@ -177,13 +182,15 @@ or at least a couple of hours</p>
 </details>
 <h2 id="shopping-list">Shopping list!</h2>
 <ol>
-<li>Chicken Breast / thigh</li>
-<li>Yogurt</li>
-<li>Tomato Sauce</li>
-<li>Heavy cream</li>
-<li>Onions</li>
-<li>Lemons / Lemon Juice</li>
+<li><strong>Chicken Breast / thigh</strong></li>
+<li><strong>Yogurt</strong></li>
+<li><strong>Tomato Sauce</strong></li>
+<li><strong>Heavy cream</strong></li>
+<li><strong>Onions</strong></li>
+<li><strong>Lemons / Lemon Juice</strong></li>
 </ol>
+<h2 id="the-spices-you-might-need-to-buy">The Spices you might need to buy!</h2>
+<h6 id="tumeric-coriander-powder-cumin-powder-garam-masala"><strong>Tumeric, Coriander Powder, Cumin Powder, Garam Masala</strong></h6>
 <h2 id="marinating-the-chicken">Marinating the chicken</h2>
 <h5 id="cut-the-chicken-into-small-bite-size-pieces-put-it-into-a-bowl-with">Cut the chicken into small bite size pieces, put it into a bowl with:</h5>
 <h6 id="salt-pepper-1-tsp-tumeric-1-tsp-garam-masala-1-3-tbsp-chili-powder-4-tbsp-yogurt-1-tsp-garlic-powder-1-tsp-ginger-powder-1-2-tsp-of-lemon-juice-and-finally-a-bit-of-oil">Salt, Pepper, 1 Tsp Tumeric, 1 Tsp Garam Masala, 1-3 TBsp Chili Powder, 4 TBsp Yogurt, 1 Tsp Garlic powder, 1 Tsp Ginger powder, 1-2 Tsp of Lemon juice, and finally a bit of oil!</h6>
@@ -216,18 +223,6 @@ or at least a couple of hours</p>
   </div>
 </details>
 <h2 id="done-serve-over-rice-and-enjoy">done! serve over rice and enjoy</h2>
-<table>
-  <thead>
-      <tr>
-          <th style="text-align: left">Spices used in the recepie</th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td style="text-align: left">Garlic Powder, Ginger Powder, Coriander Powder, Garam Masala, Salt, Pepper, Chili Powder, Cumin Powder, Sugar</td>
-      </tr>
-  </tbody>
-</table>
 <p>if you want a visual guide to the recepie the Channel <a href="https://www.youtube.com/watch?v=Cr5dn48vER8" rel="external" target="_blank">With Wendy and Shannon</a> has a great video.</p>
 
   <footer class="footline">
@@ -302,8 +297,8 @@ or at least a couple of hours</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747782719" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747782719" defer></script>
-    <script src="/js/theme.js?1747782719" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747848847" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747848847" defer></script>
+    <script src="/js/theme.js?1747848847" defer></script>
   </body>
 </html>
