--- a/public/filipino/index.html
+++ b/public/filipino/index.html
@@ -29,17 +29,17 @@ Adobo Fried BBQ">
     <meta itemprop="wordCount" content="28">
     <title>Filipino :: Ray&#39;s Recipe&#39;s</title>
     <link href="/filipino/index.xml" rel="alternate" type="application/rss+xml" title="Filipino :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747848649" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747848649" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747848649" rel="stylesheet">
-    <link href="/css/theme.css?1747848649" rel="stylesheet">
-    <link href="/css/format-html.css?1747848649" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747848649" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747848649" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747848649" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747848649" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747848649" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747848649" defer></script>
-    <script src="/js/search.js?1747848649" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747892683" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747892683" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747892683" rel="stylesheet">
+    <link href="/css/theme.css?1747892683" rel="stylesheet">
+    <link href="/css/format-html.css?1747892683" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747892683" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747892683" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747892683" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747892683" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747892683" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747892683" defer></script>
+    <script src="/js/search.js?1747892683" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -49,7 +49,7 @@ Adobo Fried BBQ">
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747848649";
+      window.relearn.index_js_url="/searchindex.en.js?1747892683";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -220,7 +220,7 @@ Adobo Fried BBQ">
             <li class="" data-nav-id="/snacks/index.html"><a class="padding" href="/snacks/index.html">Snacks</a></li>
             <li class="active parent " data-nav-id="/filipino/index.html"><a class="padding" href="/filipino/index.html">Filipino</a><ul id="R-subsections-d37179ad8375f367e520e18f1f5ed56f" class="collapsible-menu">
             <li class="" data-nav-id="/filipino/ginataang_manok/index.html"><a class="padding" href="/filipino/ginataang_manok/index.html">Ginataang Manok</a></li>
-            <li class="" data-nav-id="/filipino/lumpia/index.html"><a class="padding" href="/filipino/lumpia/index.html">Lumpia</a></li></ul></li>
+            <li class="" data-nav-id="/filipino/lumpia/index.html"><a class="padding" href="/filipino/lumpia/index.html">Lumpia Shanghai</a></li></ul></li>
             <li class="" data-nav-id="/indian/index.html"><a class="padding" href="/indian/index.html">Indian</a><ul id="R-subsections-cc1b8a711b72a13dee354fa380e93207" class="collapsible-menu"></ul></li>
           </ul>
         </div>
@@ -239,8 +239,8 @@ Adobo Fried BBQ">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747848649" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747848649" defer></script>
-    <script src="/js/theme.js?1747848649" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747892683" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747892683" defer></script>
+    <script src="/js/theme.js?1747892683" defer></script>
   </body>
 </html>
